<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_time_utc"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <RadioGroup
                android:id="@+id/frg_setting_rg_time_utc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:checkedButton="@+id/radioBtnApp"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/frg_setting_rb_negative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_time_utc_negative"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/frg_setting_rb_positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_time_utc_positive"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/frg_setting_rb_zero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorWhite"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_time_utc_zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toLeftOf="@+id/frg_setting_tv_date_format"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_date_format"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/frg_setting_tv_date_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/gradient_spinner"
                    android:ems="10"
                    android:gravity="left"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/str_date_format"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_temperature_type"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/frg_setting_rg_temperature_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radioBtnApp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <RadioButton
                        android:id="@+id/frg_setting_rb_temp_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorWhite"
                        android:checked="true"
                        android:ems="5"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/str_temperature_celsius"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/frg_setting_rb_temp_fahrenheit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorWhite"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/str_temperature_fahrenheit"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14sdp" />
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_auto_sync"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/frg_app_setting_sc_auto_sync"
                    style="@style/SwitchCompatTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="false"
                    android:padding="@dimen/_8sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frg_app_setting_rl_heat_map_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_heat_map_setting"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/frg_app_setting_iv_map_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/colorWhiteLight" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frg_app_setting_rl_export_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_export"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/frg_app_setting_iv_export_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/colorWhiteLight" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>