<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frg_view_data_button_submit"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <RadioGroup
                android:id="@+id/frg_view_data_rg_compare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:checkedButton="@+id/radioBtnApp"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/frg_view_data_rb_single_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_single_date_set"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/frg_view_data_rb_compare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:buttonTint="@color/colorWhite"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_compare"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_select_time_frame"
                android:textColor="@color/colorWhiteLight"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/frg_view_data_rg_time_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radioBtnApp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:padding="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/frg_view_data_rb_drive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:ems="5"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/str_dive"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

                <RadioButton
                    android:id="@+id/frg_view_data_rb_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/str_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/frg_view_data_ll_dive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/frg_view_data_ll_dive_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/frg_view_data_tv_lbl_ble_device_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/str_prompt_select_device"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/frg_view_data_spinner_ble_device_one"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:prompt="@string/str_prompt_select_device"
                        android:scrollbars="none"></Spinner>

                    <TextView
                        android:id="@+id/frg_view_data_tv_lbl_dive_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/str_prompt_select_dive"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/frg_view_data_spinner_dive_one"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:prompt="@string/str_prompt_select_dive"
                        android:scrollbars="none"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frg_view_data_ll_dive_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/frg_view_data_tv_lbl_ble_device_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/str_prompt_select_device"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/frg_view_data_spinner_ble_device_two"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:prompt="@string/str_prompt_select_device"
                        android:scrollbars="none"></Spinner>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/str_second_dive"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/frg_view_data_spinner_dive_two"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:prompt="@string/str_prompt_select_dive"
                        android:scrollbars="none"></Spinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frg_view_data_ll_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/frg_view_data_ll_date_time_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/frg_view_data_tv_lbl_date_time_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/str_choose_date_time"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/frg_view_data_tv_date_time_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="DD/MM/YYYY"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frg_view_data_ll_date_time_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/frg_view_data_tv_lbl_date_time_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/str_choose_finish_date_time"
                        android:textColor="@color/colorWhiteLight"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/frg_view_data_tv_date_time_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="DD/MM/YYYY"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/frg_view_data_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorAppTheme"
        android:text="@string/str_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp" />
</RelativeLayout>